--- a/sonos/sonos-queue.html
+++ b/sonos/sonos-queue.html
@@ -5,7 +5,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('better-sonos-queue',{
         category: 'Sonos',
-        defaults: {    
+        defaults: {
             confignode: {value:"", type:"better-sonos-config"},
 			songuri: {value:""},
 			position: {value:""},
@@ -15,7 +15,7 @@
         inputs:1,               // set the number of inputs - only 0 or 1
         outputs:1,              // set the number of outputs - 0 to n
         icon: "better_sonos.png",       // saved in  icons/myicon.png
-        color: "#FFFFFF", 
+        color: "#FFFFFF",
         label: function() {
             return this.name || "Sonos queue song";
         },
@@ -37,22 +37,23 @@
         <label for="node-input-confignode"> Sonos Config Node</label>
         <input type="text" id="node-input-confignode">
     </div>
-	
+
 	<div class="form-row">
         <label for="node-input-songuri"><i class="fa fa-tag"></i> Song URI</label>
         <input type="text" id="node-input-songuri" placeholder="Song URI to queue">
-    </div>	
-	
+    </div>
+
 	<div class="form-row">
         <label for="node-input-position"><i class="fa fa-tag"></i> Position</label>
 		<select type="text" id="node-input-position" style="display: inline-block; width: 70%;" >
 			<option value="empty"></option>
 			<option value="directplay">Direct play</option>
             <option value="next">Queue next</option>
-            <option value="positioninqueue">Position in queue</option>				
+            <option value="positioninqueue">Position in queue</option>
+			<option value="replace">Replace queue</option>
         </select>
     </div>
-	
+
 	<div class="form-row toggle positioninqueue">
 		<label for="node-input-positioninqueue"><i class="fa fa-tag"></i> Value</label>
         <input type="text" id="node-input-positioninqueue" placeholder="Position in queue (1..end, 0=end)">
@@ -61,7 +62,7 @@
 	<div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="SONOS Queue Node Name">
-    </div>	
+    </div>
 </script>
 
 
