--- a/sonos/sonos-control.html
+++ b/sonos/sonos-control.html
@@ -5,7 +5,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('better-sonos-control',{
         category: 'Sonos',
-        defaults: {    
+        defaults: {
             confignode: {value:"", type:"better-sonos-config"},
             name: {value:""},
 			mode: {value:""},
@@ -16,7 +16,7 @@
         inputs:1,                       // set the number of inputs - only 0 or 1
         outputs:0,                      // set the number of outputs - 0 to n
         icon: "better_sonos.png",       // saved in  icons/myicon.png
-        color: "#FFFFFF", 
+        color: "#FFFFFF",
         label: function() {
             return this.name || "Control Sonos";
         },
@@ -29,7 +29,7 @@
             $('.form-row.' + value).show()
 		  })
 		},
-        
+
     });
 </script>
 
@@ -39,14 +39,15 @@
         <label for="node-input-confignode"> Sonos Config Node</label>
         <input type="text" id="node-input-confignode">
     </div>
-	
+
 	<div class="form-row">
         <label for="node-input-mode"><i class="fa fa-tag"></i> Mode</label>
 		<select type="text" id="node-input-mode" style="display: inline-block; width: 70%;" >
 			<option value=""></option>
             <option value="play">Play</option>
             <option value="pause">Pause</option>
-            <option value="stop">Stop</option>			
+            <option value="stop">Stop</option>
+            <option value="flush">Flush Queue</option>
         </select>
     </div>
 
@@ -55,22 +56,22 @@
 		<select type="text" id="node-input-track" style="display: inline-block; width: 70%;" >
 			<option value=""></option>
             <option value="next">Next</option>
-            <option value="previous">Previous</option>			
+            <option value="previous">Previous</option>
         </select>
     </div>
-	
+
 	<div class="form-row">
         <label for="node-input-volume"><i class="fa fa-tag"></i> Volume</label>
 		<select type="text" id="node-input-volume" style="display: inline-block; width: 70%;" >
 			<option value="empty"></option>
             <option value="volume">Set volume</option>
-            <option value="mute">Mute</option>	
+            <option value="mute">Mute</option>
 			<option value="unmute">Unmute</option>
 			<option value="vol_up">Volume Up</option>
-			<option value="vol_down">Volume Down</option>			
+			<option value="vol_down">Volume Down</option>
         </select>
     </div>
-	
+
 	<div class="form-row toggle volume">
 		<label for="node-input-volume_value"><i class="fa fa-tag"></i> Value</label>
         <input type="text" id="node-input-volume_value" placeholder="Volume Value 0..100">
@@ -86,7 +87,7 @@
         <input type="text" id="node-input-volume_value" placeholder="Volume Value 0..100">
 	</div>
 
-	
+
 	<div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Sonos Config Node Name">
